feat: センサデータ更新機能を追加
